--- a/index.html
+++ b/index.html
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Shobana Ramesh: Portfolio</title>
+    <title> Shobana Ramesh: Portfolio </title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div> Header</div>
-  <div class = "header"> 
+  <div class = "navbar"> 
     <ul>
-      <li>Projects</li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href = "#">Home</a></li>
+      <li><a href = "#about-me">About me</a></li>
+      <li><a href = "#project">Projects</a></li>
+      <li><a href = "#contact-me"> Contact me</a></li>
     </ul>
   </div>
   <div class = "container">
-    <div class = "container__left"></div>
+    <div class = "container__left">
+      <img src=/>
+    </div>
     <div class = "container__right">
       <h3>Shobana Ramesh</h3>
+
       <h5> Shobana is a front end developer, likes to develop user freindly functional applications. She enjoys challenge and looking for the oppurtunity to expand her knowledge and develop skillset.  </h5>
       <div> When not online, Shobana can be found in Bay Area, California with her husband, <strong>Ramesh</strong> and 2 kids - trying out mom's receipes in the kitchen, experimenting in gardening or doing meditation. </div>
     </div>
   </div>
+  <div class = "container-row">
+        <div class ="container-row__short-cut">
+            <a href = "">
+              <img src = "" />
+              <h3>Project 1</h3>
+              <p> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+              </p>
+            </a>
+        </div>
+        <div class ="container-row__short-cut">
+            <a href = "">
+            <img src = "" />
+            <h2>Project 2</h2>
+            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. 
+            </p>
+            </a>
+        </div>
+        <div class ="container-row__short-cut">
+            <a href = "">
+            <img src = "" />
+            <h2>Project 3</h2>
+            <p> Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). 
+            </p>
+            </a>
+        </div>
+      </div>
    <div class = "footer">
     <ul>
-      <li>facebook</li>
-      <li>twitter</li>
-      <li>github</li>
+      <li><a href = "#email">gmail</a></li>
+      <li><a href = "twi">twitter</a></li>
+      <li><a href = "git"> github</a></li>
     </ul>
     </div>
 </body>
