--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class = "container__right">
       <h3>Shobana Ramesh</h3>
 
-      <h5> Shobana is a front end developer, likes to develop user freindly functional applications. She enjoys challenge and looking for the oppurtunity to expand her knowledge and develop skillset.  </h5>
-      <div> When not online, Shobana can be found in Bay Area, California with her husband, <strong>Ramesh</strong> and 2 kids - trying out mom's receipes in the kitchen, experimenting in gardening or doing meditation. </div>
+      <p> Shobana is a front end developer, likes to develop user freindly functional applications. She enjoys challenge and looking for the oppurtunity to expand her knowledge and develop skillset.  </p>
+     <!--  <div> When not online, Shobana can be found in Bay Area, California with her husband, <strong>Ramesh</strong> and 2 kids - trying out mom's receipes in the kitchen, experimenting in gardening or doing meditation. </div> -->
     </div>
   </div>
   <div class = "container-row">
@@ -52,9 +52,9 @@
       </div>
    <div class = "footer">
     <ul>
-      <li><a href = "#email">gmail</a></li>
-      <li><a href = "twi">twitter</a></li>
-      <li><a href = "git"> github</a></li>
+      <li><a href = "Shobanavv@gmail.com">gmail</a></li>
+      <li><a href = "@Shobanavv">twitter</a></li>
+      <li><a href = "@Shobanavv"> github</a></li>
     </ul>
     </div>
 </body>
